--- a/style.css
+++ b/style.css
@@ -1,7 +1,53 @@
-html, body {
-  margin: 10px;
-  padding:0px;
+@font-face {
+    font-family: fontA;
+    src: url(assets/fontovi/font1.ttf);
 }
-canvas {
-  display: block;
+
+
+
+body{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(22, 22, 22);
 }
+
+*{
+    font-family: fontA;
+    font-size: 71px;
+    text-transform: uppercase;
+    overflow: hidden;
+}
+
+main{ 
+    margin: 0;
+    padding: 0;
+    
+    position: absolute;
+    left: 25%;
+    top: 30%;
+    width: 50%;
+    height: 30%; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+a{ 
+    color: rgb(205, 204, 192); 
+    transform: translateX(0px);
+    transition: 0.5s; 
+    width: fit-content;
+}
+
+a:hover{
+    color: rgb(255, 226, 5); 
+    transform: translateX(10px);
+    transition: 0.3s;
+}
+
+ul {
+    list-style-type: none;
+  }
