--- a/style.css
+++ b/style.css
@@ -1,53 +1,267 @@
+
 @font-face {
-    font-family: fontA;
-    src: url(assets/fontovi/font1.ttf);
+    font-family: fontA; 
+    src: url(assets/font1.ttf);
+}
+@font-face {
+    font-family: fontB; 
+    src: url(assets/font1.ttf);
+}
+@font-face {
+    font-family: fontC;
+    src: url(assets/font1.ttf);
+}
+@font-face {
+    font-family: fontD; 
+    src: url(assets/font1.ttf);
+}
+
+:root{
+    --t123: -20px; 
+    --mt: -18px; 
+}
+@keyframes okA{
+    0%{opacity: 0;}
+    30%{opacity: 0;}
+    100%{opacity: 1.0;}
+}
+@keyframes okB{
+    0%{opacity: 0;}
+    70%{opacity: 0;}
+    100%{opacity: 1.0;}
+}
+
+@keyframes traNaslov {
+    0%{transform: translateY(-30px);}
+    100%{transform: translateY(0px);}
+}
+@keyframes traNaslov2 {
+    0%{transform: translateY(-100px);}
+    30%{transform: translateY(-100px);}
+    100%{transform: translateY(-70px);}
+}
+
+@keyframes t3 {
+    0%{transform: translateY(var(--t123));}
+    50%{transform: translateY(var(--t123));}
+    100%{transform: translateY(0px);}
+}
+
+@keyframes t4 {
+    0%{transform: translateY(var(--t123));}
+    58%{transform: translateY(var(--t123));}
+    100%{transform: translateY(0px);}
+}
+@keyframes t5 {
+    0%{transform: translateY(var(--t123));}
+    66%{transform: translateY(var(--t123));}
+    100%{transform: translateY(0px);}
 }
 
 
+@keyframes r1 {
+    0%{transform: translateY(20px);}
+    76%{transform: translateY(20px);}
+    100%{transform: translateY(0px);}
+}
 
+@keyframes r2 {
+    0%{transform: translateY(-10px);}
+    66%{transform: translateY(-10px);}
+    100%{transform: translateY(0px);}
+}
+@keyframes gm {
+    0%{margin-top: 0px;}
+    100%{margin-top: var(--mt);} 
+}
+
+@keyframes opac {
+    0%{opacity: 0;}
+    20%{opacity: 0;}
+    100%{opacity: 1;} 
+}
+@keyframes opac2 {
+    0%{opacity: 0;}
+    40%{opacity: 0;}
+    100%{opacity: 1;} 
+}
+
+
+*{font-family: fontA;
+    color: white;
+text-transform: uppercase;}
 body{
     margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(22, 22, 22);
+    padding: 0;  
+    background-color: #111;
+    background-color: transparent;
+    color: #155baa;
+    z-index: 0;
 }
 
-*{
-    font-family: fontA;
-    font-size: 71px;
-    text-transform: uppercase;
-    overflow: hidden;
+#a1{
+    animation: t3 2.2s cubic-bezier(0.6, 0, 0.4, 1);
+}
+#a2{
+    animation: t4 2.2s cubic-bezier(0.6, 0, 0.4, 1);
+}
+#a3{
+    animation: t5 2.2s cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-main{ 
+#z1, #z2{
+    animation: r2 2.7s cubic-bezier(0.6, 0, 0.4, 1);
+} 
+
+#mainA{
+    display: flex;
+    justify-content: center;
     margin: 0;
     padding: 0;
-    
-    position: absolute;
-    left: 25%;
-    top: 30%;
-    width: 50%;
-    height: 30%; 
-
+    width: 80vw;
+    height: 50vh;
+    margin-left: 10vw; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #f006;
+    background-color: transparent;
+    transform: translateY(30px);
+
 }
 
-a{ 
-    color: rgb(205, 204, 192); 
-    transform: translateX(0px);
-    transition: 0.5s; 
-    width: fit-content;
+.naslov{
+    margin: 0; padding: 0;
+    font-weight: normal;
+    font-size: 180px;
+    text-align: center;
+    font-family: fontD; 
+    line-height: .8;
+    animation: traNaslov 2s cubic-bezier(0.7, 0, 0.3, 1);
+    transform: translateY(0px);
 }
 
-a:hover{
-    color: rgb(255, 226, 5); 
-    transform: translateX(10px);
-    transition: 0.3s;
+.naslov2{
+
+    animation: traNaslov2 2s cubic-bezier(0.7, 0, 0.3, 1);
+    transform: translateY(-70px);
+
 }
 
-ul {
-    list-style-type: none;
-  }
+.opis{
+    margin: 0; padding: 0; 
+    font-weight: normal;
+    font-size: 25px; 
+    text-align: center;
+    font-family: fontB;
+}
+ 
+
+
+#mainB{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 80vw;
+    height: 42vh;
+    margin-left: 10vw; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #f0f6;
+    background-color: transparent;
+    margin-top: 7vh;
+
+}
+
+a{
+    text-decoration: none;
+    font-family: fontC;
+    font-size: 23px;
+    font-weight: normal;
+    text-align: center;
+}
+
+
+.dolje{ 
+    font-family: fontC;
+    font-size: 23px;
+    font-weight: bold;
+    line-height: 0;
+    height: fit-content;
+}
+
+.linkovi{
+    background-color: #0ffa;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 40%;
+
+    
+}
+
+
+.doljaTraka{
+
+
+    background-color: #1f0A;
+    background-color: transparent;
+    height: fit-content;
+    width: 35%; 
+    margin-left: 32.5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.centriran{
+    text-align: center;
+    transform: translateY(-60px);
+} 
+
+.translacija{ 
+    transform: translateY(-40px);
+
+}
+ 
+.xyG{
+    position: absolute; 
+    width: 98vw;
+    height: fit-content;
+    left: 1vw;
+    top: 0vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;  
+
+} 
+.xyD{
+    position: absolute; 
+    width: 98vw;
+    height: fit-content;
+    left: 1vw;
+    bottom: 0vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.xyG, .xyD{
+    font-weight: normal;
+    font-size: 11px;
+}
+
+
+.naknadni{  
+    animation: opac 2.2s cubic-bezier(0.8, 0, 0.2, 1);
+    opacity: 1;
+}
+.naknadni2{  
+    animation: opac 3.3s cubic-bezier(0.8, 0, 0.2, 1);
+    opacity: 1;
+}
