--- a/style.css
+++ b/style.css
@@ -1,271 +1,192 @@
-
 @font-face {
     font-family: fontA; 
     src: url(assets/fontovi/font1.ttf);
 }
-@font-face {
-    font-family: fontB; 
-    src: url(assets/fontovi/font1.ttf);
-}
-@font-face {
-    font-family: fontC;
-    src: url(assets/fontovi/font1.ttf);
-}
-@font-face {
-    font-family: fontD; 
-    src: url(assets/fontovi/font1.ttf);
-}
 
-:root{
-    --t123: -20px; 
-    --mt: -18px; 
+  
+@keyframes desno{
+    0%{margin-left: 0px; color: var(--clr);}
+    50%{margin-left: 50px;color: var(--drg);}
+    100%{margin-left: 0px;color: var(--clr);}
 }
-@keyframes okA{
-    0%{opacity: 0;}
-    30%{opacity: 0;}
-    100%{opacity: 1.0;}
-}
-@keyframes okB{
-    0%{opacity: 0;}
-    70%{opacity: 0;}
-    100%{opacity: 1.0;}
-}
-
-@keyframes traNaslov {
-    0%{transform: translateY(-30px);}
-    100%{transform: translateY(0px);}
-}
-@keyframes traNaslov2 {
-    0%{transform: translateY(-100px);}
-    30%{transform: translateY(-100px);}
-    100%{transform: translateY(-70px);}
-}
-
-@keyframes t3 {
-    0%{transform: translateY(var(--t123));}
-    50%{transform: translateY(var(--t123));}
-    100%{transform: translateY(0px);}
-}
-
-@keyframes t4 {
-    0%{transform: translateY(var(--t123));}
-    58%{transform: translateY(var(--t123));}
-    100%{transform: translateY(0px);}
-}
-@keyframes t5 {
-    0%{transform: translateY(var(--t123));}
-    66%{transform: translateY(var(--t123));}
-    100%{transform: translateY(0px);}
+@keyframes desno3{
+    0%{margin-left: 0px; color: var(--clr);}
+    50%{margin-left: 100px;color: var(--drg);}
+    100%{margin-left: 0px;color: var(--clr);}
 }
 
 
-@keyframes r1 {
-    0%{transform: translateY(20px);}
-    76%{transform: translateY(20px);}
-    100%{transform: translateY(0px);}
-}
-
-@keyframes r2 {
-    0%{transform: translateY(-10px);}
-    66%{transform: translateY(-10px);}
-    100%{transform: translateY(0px);}
-}
-@keyframes gm {
-    0%{margin-top: 0px;}
-    100%{margin-top: var(--mt);} 
-}
-
-@keyframes opac {
-    0%{opacity: 0;}
-    20%{opacity: 0;}
-    100%{opacity: 1;} 
-}
-@keyframes opac2 {
-    0%{opacity: 0;}
-    40%{opacity: 0;}
-    100%{opacity: 1;} 
-}
-
-
-*{font-family: fontA;
-    color: white;
-text-transform: uppercase;}
-body{
-    margin: 0;
-    padding: 0;  
-    background-color: #111;
-    background-color: transparent;
-    color: #155baa;
-    z-index: 0;
-}
-
-#a1{
-    animation: t3 2.2s cubic-bezier(0.6, 0, 0.4, 1);
-}
-#a2{
-    animation: t4 2.2s cubic-bezier(0.6, 0, 0.4, 1);
-}
-#a3{
-    animation: t5 2.2s cubic-bezier(0.6, 0, 0.4, 1);
-}
-
-#z1, #z2{
-    animation: r2 2.7s cubic-bezier(0.6, 0, 0.4, 1);
-} 
-
-#mainA{
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    width: 80vw;
-    height: 50vh;
-    margin-left: 10vw; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #f006;
-    background-color: transparent;
-    transform: translateY(30px);
-
-}
-
-.naslov{
-    margin: 0; padding: 0;
-    font-weight: normal;
-    font-size: 180px;
-    text-align: center;
-    font-family: fontD; 
-    line-height: .8;
-    animation: traNaslov 2s cubic-bezier(0.7, 0, 0.3, 1);
-    transform: translateY(0px);
-}
-
-.naslov2{
-
-    animation: traNaslov2 2s cubic-bezier(0.7, 0, 0.3, 1);
-    transform: translateY(-70px);
-
-}
-
-.opis{
-    margin: 0; padding: 0; 
-    font-weight: normal;
-    font-size: 25px; 
-    text-align: center;
-    font-family: fontB;
+@keyframes desno2{
+    0%{color: var(--clr);}
+    50%{color: var(--drga);}
+    100%{color: var(--clr);}
 }
  
 
+:root{
+    --vel: 40px;
+    --velIme: 70px;
+    --vr: 1.4s;
+    --vr2: 1.65s;
 
-#mainB{
-    display: flex;
-    justify-content: center;
+
+    --drg: #fce762;
+    --drga: #fce76222;
+    
+    --clr: #fce762; 
+    --bckclr: #1a1d1f;
+    --bckclrx: #111;
+}
+
+
+body{
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background-color: var(--bckclrx);
+    text-transform: uppercase; 
+    color: var(--clr);
+    font-weight: normal;
+}
+
+html{
+    font-size: var(--vel);
+}
+
+main{
+    background-color: var(--bckclr);
+    margin: 0;
+    padding: 0;
+    position: absolute; 
     width: 80vw;
-    height: 42vh;
-    margin-left: 10vw; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color: #f0f6;
-    background-color: transparent;
-    margin-top: 7vh;
+    left: 10vw;
+    top: 0;
+    height: 100vh;
+}
+ 
+ 
+.ime1{ 
+    margin: 0;
+    padding: 0;
+    font-family: fontA;  
+    position: absolute;
+    top: 5vh;
+    left: 0;
+    width: 80vw; 
+    left: 10vw; 
+    text-align: center;   
+    animation: desno var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 0ms;
+}  
+
+
+ 
+.ime2{ 
+    margin: 0;
+    padding: 0;
+    font-family: fontA;  
+    position: absolute;
+    top: 5vh;
+    margin-top: 43px;
+    left: 0;
+    width: 80vw; 
+    left: 10vw; 
+    text-align: center;   
+    animation: desno var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 70ms;
+}  
+
+ .links{  
+    margin: 0;
+    padding: 0;
+    font-family: fontA; 
+    position: absolute;
+    top: 53vh;
+    left: 0;
+    width: 80vw; 
+    left: 10vw; 
+    text-align: center;  
+    animation: desno var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 140ms;  
+}
+
+
+.linkovi{ 
+    margin: 0;
+    padding: 0;
+    font-family: fontA; 
+    position: absolute;
+    top: 70vh;
+    left: 0;
+    width: 80vw; 
+    left: 10vw;  
+    text-align: center;
 
 }
+
+.l1{ 
+    animation: desno3 var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 210ms;  
+}
+.l2{ 
+    animation: desno3 var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 280ms;  
+}
+.l3{ 
+    animation: desno3 var(--vr) cubic-bezier(0.7, 0, 0.3, 1) 350ms;  
+}
+
+.midl{
+    animation: desno2 var(--vr2) cubic-bezier(0.7, 0, 0.3, 1) 610ms; 
+}
+
+
+
+
+br{
+    display: block; /* makes it have a width */
+    content: ""; /* clears default height */
+    margin-top: -5px; /* height */
+}
+
+
+
+ 
 
 a{
     text-decoration: none;
-    font-family: fontC;
-    font-size: 23px;
+    color: var(--clr);
+    transition: 0.12s;
+}
+
+ 
+ 
+ a:hover{
+    -webkit-text-stroke: 2px var(--clr); 
+}
+
+h3{
+    font-family: fontA;
+    font-size: 12px;
     font-weight: normal;
-    text-align: center;
-}
-
-
-.dolje{ 
-    font-family: fontC;
-    font-size: 23px;
-    font-weight: bold;
-    line-height: 0;
-    height: fit-content;
-}
-
-.linkovi{
-    background-color: #0ffa;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 40%;
-
-    
-}
-
-
-.doljaTraka{
-
-
-    background-color: #1f0A;
-    background-color: transparent;
-    height: fit-content;
-    width: 35%; 
-    margin-left: 32.5%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-
-.centriran{
-    text-align: center;
-    transform: translateY(-60px);
-} 
-
-.translacija{ 
-    transform: translateY(-40px);
-
+    color: var(--clr);
 }
  
-.xyG{
-    position: absolute; 
-    width: 98vw;
-    height: fit-content;
-    left: 1vw;
+.trakaG{ 
+    position: absolute;
+    width: 79vw;
+    left: 10.5vw; 
     top: 0vh;
+    line-height: 2px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;  
-
-} 
-.xyD{
-    position: absolute; 
-    width: 98vw;
-    height: fit-content;
-    left: 1vw;
+    justify-content: space-between; 
+}
+.trakaD{ 
+    position: absolute;
+    width: 79vw;
+    left: 10.5vw;
     bottom: 0vh;
+    line-height: 2px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-
+    justify-content: space-between; 
 }
-
-.xyG, .xyD{
-    font-weight: normal;
-    font-size: 11px;
-}
-
-
-.naknadni{  
-    animation: opac 2.2s cubic-bezier(0.8, 0, 0.2, 1);
-    opacity: 1;
-}
-.naknadni2{  
-    animation: opac 3.3s cubic-bezier(0.8, 0, 0.2, 1);
-    opacity: 1;
-}
-
-.translacijaNaslova{
- transform: translateY(20px);   
-}
+ 
