--- a/blender/style.css
+++ b/blender/style.css
@@ -1,6 +1,11 @@
 @font-face {
     font-family: fontA;
-    src: url(fontovi/font1.ttf);
+    src: url(../assets/fontovi/font1.ttf); 
+}
+
+:root{
+    --boja-slova: #0f0f0f;
+    --boja-podloge: #963b2f;
 }
 
 *{overflow: hidden;}
@@ -10,7 +15,8 @@ body{
     padding: 0;
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(34, 34, 34);
+    background-color: var(--boja-slova);
     color: white;
 }
 
@@ -22,12 +28,12 @@ body{
     height: calc(100vh - 20px);
     top: 0;
     left: calc(15vw - 10px);
-    background-color: #984b33;
+    background-color: var(--boja-podloge);
  }
 
  .galerija{
-    width: 56%;
-    margin-left: 22%;
+    width: 44%;
+    margin-left: 28%;
     padding-top: calc(50vh - 10px);
     height: calc(100vh - 50vh - 20px);
     background-color: #00fa;
@@ -39,12 +45,21 @@ body{
 }
 
 .malaSlika{
-    width: calc((15vw - 10px)/2.3); 
-    height: calc(((15vw - 10px)/2.3)*1.48); 
-    object-fit: cover; 
+    width: calc((11vw - 10px)/2.3); 
+    height: calc(((11vw - 10px)/2.3)*1.48); 
+     
 }
 .malaSlika:hover{cursor: pointer;}
+img{
+    transition: .3s;
+}
 
+img:hover{  
+    width: calc((11vw - 10px)/2.3); 
+    height: calc(((11vw - 10px)/2.3)*1.48); 
+    transform: scaleX(120%);
+    transition: 0.3s;
+}
 
 #v1{
     position: absolute;
@@ -89,6 +104,8 @@ p{
     padding: 0;
     text-align: center;
     color: black;
+    color: rgb(34, 34, 34);
+    color: var(--boja-slova);
     font-family: fontA;
     font-size: 14px;
 }
@@ -102,7 +119,7 @@ p{
     padding: 0; 
     background-color: transparent;
     width: fit-content;
-    height: calc((((15vw - 10px)/2.3)*1.48) + 25px);
+    height: calc((((11vw - 10px)/2.3)*1.48) + 20px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -114,13 +131,17 @@ a{
     text-decoration: underline;
     text-decoration-thickness: 1px;
     color: black;
-    font-weight: normal;
+    color: rgb(34, 34, 34);
+    color: var(--boja-slova);
+    font-weight: bold;
     font-size: 14px;
 
 }
 h3{
     font-family: fontA; 
     color: black;
+    color: rgb(34, 34, 34);
+    color: var(--boja-slova);
     font-weight: normal;
     font-size: 14px;
 }
@@ -133,11 +154,25 @@ h3{
     grid-template-columns: repeat(3, 1fr);
 }
 
+@keyframes navbar-anim {
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
 #navbar-1{
     grid-column: 1 / 2;
     background-color: #f00;
     background-color: transparent;
     padding-left: 20px;
+    animation: navbar-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 450ms; 
+    
 }
 #navbar-2{
     grid-column: 2 / 3;
@@ -146,6 +181,7 @@ h3{
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: navbar-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 500ms; 
 }
 #navbar-3{
     grid-column: 3 / 4;
@@ -155,10 +191,43 @@ h3{
     justify-content: end;
     align-items: center;
     padding-right: 20px;
+    animation: navbar-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 550ms; 
+}
+
+@keyframes naslov-anim {
+    
+    0%{
+        transform: scaleY(100%);
+        opacity: 1;
+        letter-spacing: -5px;
+    }
+    30%{
+        transform: scaleY(60%);
+        opacity: 0;
+        letter-spacing: -25px;
+    }
+    35%{
+        transform: scaleY(0%);
+        opacity: 0;
+        letter-spacing: -77px;
+    }
+    40%{
+        transform: scaleY(60%);
+        opacity: 0;
+        letter-spacing: -25px;
+    }
+    100%{
+        transform: scaleY(100%);
+        opacity: 1;
+        letter-spacing: -5px;
+    }
+    
 }
   
 #naslov{
     color: black;
+    color: rgb(34, 34, 34);
+    color: var(--boja-slova);
     font-family: fontA;
     font-size: 195.0px;
     font-weight: bold;
@@ -167,11 +236,18 @@ h3{
     position: absolute;
     width: 70vw;
     height: fit-content;
-    top: -90px;
-    left: calc(15vw);
-    text-align: center;
-
+    top: -100px;
+    left: 0;
+    text-align: center; 
+    animation: naslov-anim 1.8s cubic-bezier(0.8, 0, 0.2, 1);
+    transform: scaleY(100%); 
+    letter-spacing: -5px;
 }
+ 
+ 
+
+ 
+ 
 
 .fleks-dole{
     position: absolute;
@@ -194,6 +270,9 @@ h3{
 .odjavni{
     text-align: left;
 }
+.odjavni2{
+    text-align: right;
+}
 
 #od1{ 
     margin-left: 20px;
@@ -209,14 +288,77 @@ h3{
     background-color: #f3fa;
     background-color: transparent;
 }
+@keyframes fleks-dole-anim {
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
 #fleks-dole-1{
     grid-column: 1/3; 
+    animation: fleks-dole-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 350ms; 
 }
 #fleks-dole-2{
     grid-column: 3/8; 
+    animation: fleks-dole-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 450ms; 
 }
 #fleks-dole-3{
     grid-column: 8/13; 
+    animation: fleks-dole-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 550ms; 
+}
+#fleks-dole-4{
+    grid-column: 14/16;  
+    animation: fleks-dole-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 650ms; 
+}
+
+#od4{  
+    align-items: right;
+    margin-right: 20px;
 }
 
 .hesh{text-align: left;}
+
+#tel-broj{
+    font-size: 13px;
+}
+
+
+
+@keyframes s-anim {
+    0%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    30%{
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+ 
+
+.se1{
+    animation: s-anim 2s cubic-bezier(0.8, 0, 0.2, 1) 50ms; 
+}
+.se2{
+    animation: s-anim 2s cubic-bezier(0.8, 0, 0.2, 1) 100ms; 
+}
+.se3{
+    animation: s-anim 2s cubic-bezier(0.8, 0, 0.2, 1) 150ms; 
+}
+.se4{
+    animation: s-anim 2s cubic-bezier(0.8, 0, 0.2, 1) 200ms; 
+}
+.se5{
+    animation: s-anim 2s cubic-bezier(0.8, 0, 0.2, 1) 250ms; 
+}
+
