--- a/blender/style.css
+++ b/blender/style.css
@@ -8,13 +8,17 @@
     --boja-podloge: #963b2f;
 }
 
-*{overflow: hidden;}
+*{
+    overflow: hidden;
+     
+} 
+ 
 
 body{
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 120vw;
+    height: 120vh;
     background-color: rgb(34, 34, 34);
     background-color: var(--boja-slova);
     color: white;
@@ -31,6 +35,21 @@ body{
     background-color: var(--boja-podloge);
  }
 
+ @media screen and (max-width: 800px) {
+    main{
+        margin: 10px;
+        position: absolute;
+        width: 70vw;
+        height: calc(100vh - 20px);
+        top: 0;
+        left: calc(0px);
+        background-color: var(--boja-podloge);
+     }
+
+    
+
+ }
+
  .galerija{
     width: 44%;
     margin-left: 28%;
@@ -43,19 +62,50 @@ body{
     justify-content: space-around;
 
 }
+@media screen and (max-width: 800px) {
+    .galerija{ 
+        width: 90%;
+        margin-left: 5%;
+        padding-top: calc(45vh - 10px);
+        height: calc(100vh - 50vh - 20px);
+        background-color: #00fa;
+        background-color: transparent;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+  }
+ 
 
 .div-malaSlika{
     object-fit: contain;
     width: calc((11vw - 10px)/2.3); 
     height: calc(((11vw - 10px)/2.3)*1.48); 
-    transition: 0.3s;
+    transition: 0.3s; 
 }
+
+@media screen and (max-width: 800px) {
+    .div-malaSlika{ 
+        width: calc((26vw - 10px)/2.3); 
+        height: calc(((21vw - 10px)/2.3)*1.48); 
+        transition: 0.3s; 
+    }
+  }
+
 
 .malaSlika{
     width: calc((11vw - 10px)/2.3); 
     height: calc(((11vw - 10px)/2.3)*1.48); 
-    transition: 0.3s;
+    transition: 0.3s; 
 }
+
+@media screen and (max-width: 800px) {
+    .malaSlika{ 
+        width: calc((26vw - 10px)/2.3); 
+        height: calc(((21vw - 10px)/2.3)*1.48); 
+        transition: 0.3s; 
+    }
+  }
 
 .malaSlika:hover{
     cursor: pointer; 
@@ -83,6 +133,8 @@ body{
 }
 
 
+ 
+
 
 #v3{
     position: absolute;
@@ -102,6 +154,29 @@ body{
     right: 10px;
 }
 
+@media screen and (max-width: 800px) {
+    #v1, #v3{width: 0; height: 0; opacity: 0;
+    }
+
+    #v4{
+        position: absolute;
+        object-fit: cover;
+        width: calc(24vw); 
+        height: calc(50vh - 15px);
+        bottom: 10px;
+        right: 10px;
+    }
+
+    #v2{
+        position: absolute;
+        object-fit: cover;
+        width: calc(24vw); 
+        height: calc(50vh - 15px);
+        top: 10px;
+        right: 10px;
+    }
+  }
+
 p{ 
     margin: 0;
     padding: 0;
@@ -111,6 +186,7 @@ p{
     color: var(--boja-slova);
     font-family: fontA;
     font-size: 14px;
+    font-size: 0.95vw;
 }
 
 .opis{
@@ -127,6 +203,11 @@ p{
     flex-direction: column;
     justify-content: space-between;
 }
+@media screen and (max-width: 800px) {
+    .fleks{ 
+        height: calc((((11vw - 10px)/2.3)*1.48) + 55px); 
+    }
+  }
 
 a{
     font-family: fontA; 
@@ -138,8 +219,21 @@ a{
     color: var(--boja-slova);
     font-weight: bold;
     font-size: 14px;
+    font-size: 0.95vw;
 
 }
+
+@media screen and (max-width: 800px) {
+    a{ 
+        text-decoration: none; 
+        font-weight: bold;
+        margin-top: -3px;
+        font-size: calc(2.8vw - 0px);
+    }
+  }
+
+
+
 h3{
     font-family: fontA; 
     color: black;
@@ -147,7 +241,16 @@ h3{
     color: var(--boja-slova);
     font-weight: normal;
     font-size: 14px;
+    font-size: 0.95vw;
 }
+@media screen and (max-width: 800px) {
+    h3{ 
+        margin-top: 10px;
+        font-size: calc(2.8vw - 0px);
+    }
+  }
+
+
 .navbar{
     position: absolute;
     width: 100%;
@@ -233,19 +336,28 @@ h3{
     color: var(--boja-slova);
     font-family: fontA;
     font-size: 195.0px;
+    font-size: 12vw;
     font-weight: bold;
     background-color: #2ff3;
     background-color: transparent;
     position: absolute;
     width: 70vw;
     height: fit-content;
-    top: -100px;
+    top: -7vw;
     left: 0;
     text-align: center; 
     animation: naslov-anim 1.8s cubic-bezier(0.8, 0, 0.2, 1);
     transform: scaleY(100%); 
     letter-spacing: -5px;
 }
+
+@media screen and (max-width: 800px) {
+    #naslov{
+        font-size: 13.5vw;
+        top: 3vw;
+        letter-spacing: -3px;
+    }
+  }
  
  
 
@@ -263,6 +375,20 @@ h3{
     grid-template-columns: repeat(15, 1fr);
 }
 
+@media screen and (max-width: 800px) {
+    .fleks-dole{
+        position: absolute;
+        width: 70%;
+        left: 0px; 
+        bottom: 10px; 
+        background-color: transparent;
+        display: grid;   
+        gap: 40px;
+        grid-template-columns: repeat(15, 1fr);
+    }
+  }
+ 
+ 
 .odjava{
     margin-bottom: 10px;
     display: flex;
@@ -291,6 +417,16 @@ h3{
     background-color: #f3fa;
     background-color: transparent;
 }
+
+
+
+@media screen and (max-width: 800px) {
+    p{
+        font-size: 14px; 
+        font-size: 2vw;
+    }
+  }
+
 @keyframes fleks-dole-anim {
     0%{
         opacity: 1;
@@ -320,16 +456,42 @@ h3{
     animation: fleks-dole-anim 1.3s cubic-bezier(0.8, 0, 0.2, 1) 650ms; 
 }
 
+@media screen and (max-width: 800px) {
+    #fleks-dole-2{ 
+        grid-column: 3/6; 
+    }
+
+    #fleks-dole-3{ 
+        grid-column: 6/10; 
+    }
+  }
+
 #od4{  
     align-items: right;
     margin-right: 20px;
 }
 
 .hesh{text-align: left;}
+@media screen and (max-width: 800px) {
+    .hesh{ 
+        font-size: 10px;
+    }
+  }
 
 #tel-broj{
     font-size: 13px;
+    font-size: calc(0.95vw - 2px);
 }
+
+@media screen and (max-width: 800px) {
+    #tel-broj{ 
+        text-decoration: none;
+        margin-top: 10px;
+        font-size: calc(2.8vw - 0.5px);
+    }
+  }
+ 
+ 
 
 
 
