--- a/demo-scroll/style.css
+++ b/demo-scroll/style.css
@@ -4,6 +4,19 @@
 }
 
 
+
+.page-loader{
+  background: black url(load.gif) no-repeat center center;
+  background-size: 15%;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+
+
+  z-index: 1;
+}
+
+ 
  
 
 
