--- a/demo/style.css
+++ b/demo/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: fontA;
-    src: url(fontovi/AtHaussMono-Regular.otf);
+    src: url(../assets/fontovi/font2.ttf);
 }
 
 :root{
