--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: fontA; 
-    src: url(assets/fontovi/font1.ttf);
+    src: url(fontovi/font1.ttf);
 }
 
 
@@ -8,7 +8,6 @@
     font-family: fontA;  
     font-weight: normal;
     text-transform: uppercase;
-    font-weight: normal;
 }
 
 :root{
