--- a/903/style.css
+++ b/903/style.css
@@ -3,6 +3,7 @@
     --left-kanvas: 20vw; 
     --desno: 150px;
     --granica: 60vw;
+    --vh100: 100vh;
 }
 
   @media screen and (max-width: 820px){
@@ -11,6 +12,7 @@
         --left-kanvas: 5vw; 
         --desno: 0px;
         --granica: 92vw;
+        --vh100: 60vh;
       }
   }
 
@@ -251,8 +253,7 @@ img:hover{
 
 #druga{
     width: 100vw;
-    height: 100vh;
-    height: 100svh;
+    height: var(--vh100);
     background-color: #111;
     display: flex;
     align-items: center;
@@ -272,7 +273,7 @@ img:hover{
 
 #treca{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #efff04;
     display: flex;
     align-items: center;
@@ -293,7 +294,7 @@ img:hover{
 
 #cetvrta{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #111;
     display: flex;
     align-items: center;
@@ -313,7 +314,7 @@ img:hover{
 
 #peta{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #e7e7e7;
     display: flex;
     align-items: center;
@@ -333,7 +334,7 @@ img:hover{
 
 #sesta{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #111;
     display: flex;
     align-items: center;
@@ -352,7 +353,7 @@ img:hover{
 
 #sedma{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #e7e7e7;
     display: flex;
     align-items: center;
@@ -372,7 +373,7 @@ img:hover{
 
 #prva{
     width: 100vw;
-    height: 100dvh;
+    height: var(--vh100);
     background-color: #efff04;
     display: flex;
     align-items: center;
